integrating posts from other /blog/ repo

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
   </title>
-  {% if page.path contains '_posts' %}
+  {% if page.path contains '/blog/_posts' %}
   <!-- Twitter Card data -->
   <meta name="twitter:card" value="summary">
   <!-- Open Graph data -->
@@ -46,10 +46,9 @@
 
     var backgroundImage = [];
 
-    backgroundImage[0]='bcg1.jpg';
-    backgroundImage[1]='bcg2.jpg';
-    backgroundImage[2]='bcg3.jpg';
-    backgroundImage[3]='bcg4.jpg';
+    backgroundImage[0]='bcg2.jpg';
+    backgroundImage[1]='bcg3.jpg';
+    backgroundImage[2]='bcg5.jpg';
 
     var random=Math.floor(Math.random()*4);
     document.write("<style>body {background: url("+"/assets/images/"+backgroundImage[random]+") no-repeat center center fixed;-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;color:#fff;background-color:#333;}</style>")
@@ -72,6 +71,4 @@
   <link rel="apple-touch-icon-precomposed" sizes="128x128" href="{{site.url}}/assets/images/favicon-128.png">
   <link rel="shortcut icon" href="{{site.url}}/assets/images/favicon-16.ico">
 
-  <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
 </head>
